[tool.poetry]
name = "djangoproject1"
version = "0.1.0"
description = ""
authors = ["SurPetrosian <surach2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
